<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.hinterland.app.components.views.HinterlandToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_header"
            app:title="@string/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/circle_background"
                android:contentDescription="@string/image"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_24" />

            <Button
                android:id="@+id/btnUploadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:hint="@string/firstName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:hint="@string/lastName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="emailAddress"
                android:hint="@string/login_email_hint"
                android:focusable="false"
                android:clickable="false"
                android:enabled="false"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="username"
                android:focusable="false"
                android:clickable="false"
                android:enabled="false"
                android:hint="@string/userName"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnSaveChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/saveChanges" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>